--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.viniciomendez.anotador">
-   <permission android:name="INTERNET"></permission>
+
+    <permission android:name="INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".Main2Activity"
             android:label="@string/app_name">
@@ -22,7 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddTeamActivity"></activity>
+        <activity android:name=".AddTeamActivity" />
+        <activity
+            android:name=".EquipoActivity"
+            android:parentActivityName=".Main2Activity"></activity>
+        <activity android:name=".AddCalendario"></activity>
     </application>
 
 </manifest>
